# zk-map-reduce

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  index.html
client/src/: main.rs  prover.rs  toggle.rs
masm/: cube.masm  double.masm  forty_two.masm  random.masm  square.masm
server/: Cargo.toml
server/src/: client_route.rs  main.rs  state.rs  verifier.rs
types/: Cargo.toml
types/src/: lib.rs
