[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
base64 = "0.5"
getrandom = { version = "0.2", features = ["js"] }
gloo = { version = "0.11", default-features = false, features = ["dialogs", "net"] }
miden-vm = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "Node",
  "Window",
]

[workspace]
resolver = "2"
members = ["client", "server", "types"]
