[package]
name = "zkmr-client"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
getrandom.workspace = true
gloo.workspace = true
miden-vm.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
zkmr-types = { path = "../types" }
